feat: API, Service, DAO全部采用DI的设计方式
