# docs/swagger.json
@@ -10,6 +10,9 @@
     "paths": {
         "/api/v1/categories": {
             "get": {
+                "tags": [
+                    "Category"
+                ],
                 "summary": "Get category list",
                 "parameters": [
                     {
@@ -30,6 +33,9 @@
         },
         "/api/v1/category/{name_or_id}": {
             "get": {
+                "tags": [
+                    "Category"
+                ],
                 "summary": "Get category details",
                 "parameters": [
                     {
@@ -71,6 +77,9 @@
         },
         "/api/v1/post/{slug_or_id}": {
             "get": {
+                "tags": [
+                    "Post"
+                ],
                 "summary": "Get post details",
                 "parameters": [
                     {
@@ -86,6 +95,9 @@
         },
         "/api/v1/posts": {
             "get": {
+                "tags": [
+                    "Post"
+                ],
                 "summary": "Get post list",
                 "parameters": [
                     {
@@ -171,6 +183,9 @@
                 "responses": {}
             },
             "delete": {
+                "tags": [
+                    "Post"
+                ],
                 "summary": "Delete a post",
                 "parameters": [
                     {
@@ -193,6 +208,9 @@
         },
         "/api/v1/private/post/{id}/status": {
             "patch": {
+                "tags": [
+                    "Post"
+                ],
                 "summary": "Change post status",
                 "parameters": [
                     {
@@ -258,7 +276,7 @@
                 },
                 "keywords": {
                     "type": "string",
-                    "maxLength": 100
+                    "maxLength": 255
                 },
                 "published_at": {
                     "description": "RFC3339 \"published_at\": \"2026-02-27T18:00:00+08:00\"",
@@ -325,6 +343,10 @@
                 "id": {
                     "type": "integer"
                 },
+                "keywords": {
+                    "type": "string",
+                    "maxLength": 255
+                },
                 "slug": {
                     "type": "string",
                     "maxLength": 100
@@ -346,11 +368,11 @@
                     "type": "string",
                     "maxLength": 255
                 },
-                "tag_ids": {
+                "tags": {
                     "description": "标签 ID 列表 (全量覆盖)",
                     "type": "array",
                     "items": {
-                        "type": "integer"
+                        "type": "string"
                     }
                 },
                 "title": {
